--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/troquinhas
+spring.datasource.url=jdbc:mysql://mysql:3306/troquinhas
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=teste
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
