Generation strategy dos id's alterado, views corrigidas com nova nomenclatura para variável figurinhasAdquiridas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql:3306/troquinhas
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/troquinhas
 spring.datasource.username=root
-spring.datasource.password=teste
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
